--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
 <p>You can use this small application to search for primers for PCR in a sequence of your choice</p>
 <a href="https://twitter.com/chadstachowicz">Twitter</a>
 <br/>
-<form>
+<form method="POST" action="/results">
   <div class="form-group">
     <label for="sequence" class="col-sm-2 col-form-label">Sequence to search</label>
       <textarea class="form-control" id="sequence" rows="10"></textarea>
