--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,50 +6,50 @@
 <form method="POST" action="/results">
   <div class="form-group">
     <label for="sequence" class="col-sm-2 col-form-label">Sequence to search</label>
-      <textarea class="form-control" id="sequence" rows="10"></textarea>
+      <textarea class="form-control" id="sequence" name="sequence" rows="10"></textarea>
   </div><br/>
   <h5>Melting Temperature Range (Tm)</h5>
   <div class="form-group row">
     <label for="minTm" class="col-sm-2 col-form-label">Min Tm</label>
     <div class="col-sm-4">
-      <input type="text" class="form-control" id="minTm" value="40">
+      <input type="text" class="form-control" id="minTm" name="minTm" value="40">
     </div>
     <label for="maxTm" class="col-sm-2 col-form-label">Min Tm</label>
     <div class="col-sm-4">
-      <input type="text" class="form-control" id="maxTm" value="60">
+      <input type="text" class="form-control" id="maxTm" name="maxTm" value="60">
     </div>
   </div><br/>
   <h5>GC Content Range (GC)</h5>
   <div class="form-group row">
     <label for="minGc" class="col-sm-2 col-form-label">Min GC</label>
     <div class="col-sm-4">
-      <input type="text" class="form-control" id="minGc" value="50">
+      <input type="text" class="form-control" id="minGc" name="minGc" value="50">
     </div>
     <label for="maxGc" class="col-sm-2 col-form-label">Max GC</label>
     <div class="col-sm-4">
-      <input type="text" class="form-control" id="maxGc" value="60">
+      <input type="text" class="form-control" id="maxGc" name="maxGc" value="60">
     </div>
   </div><br/>
   <h5>Primer Length Range</h5>
   <div class="form-group row">
     <label for="minPmBp" class="col-sm-2 col-form-label">Min</label>
     <div class="col-sm-4">
-      <input type="text" class="form-control" id="minPmBp" value="22">
+      <input type="text" class="form-control" id="minPmBp" name="minPmBp" value="22">
     </div>
     <label for="maxPmBp" class="col-sm-2 col-form-label">Max</label>
     <div class="col-sm-4">
-      <input type="text" class="form-control" id="maxPmBp" value="28">
+      <input type="text" class="form-control" id="maxPmBp" name="maxPmBp" value="28">
     </div>
   </div><br/>
   <h5>Amplicon Length Range</h5>
   <div class="form-group row">
     <label for="minAmpBp" class="col-sm-2 col-form-label">Min</label>
     <div class="col-sm-4">
-      <input type="text" class="form-control" id="minAmpBp" value="300">
+      <input type="text" class="form-control" id="minAmpBp" name="minAmpBp" value="300">
     </div>
     <label for="maxAmpBp" class="col-sm-2 col-form-label">Max</label>
     <div class="col-sm-4">
-      <input type="text" class="form-control" id="maxAmpBp" value="1000">
+      <input type="text" class="form-control" id="maxAmpBp" name="maxAmpBp" value="1000">
     </div>
   </div><br/>
   <button type="submit" class="btn btn-primary mb-2">Find Primers</button>
