fixed table error

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,7 @@
-<h1 style="margin-top:40px">Primer Finder v1.0</h1>
+<h1 style="margin-top:40px">Primer Search v0.01</h1>
 <h3>Author: Chad Stachowicz (cstachowicz@cloverhound.com)</h3>
 <p>You can use this small application to search for primers for PCR in a sequence of your choice</p>
+<p>***NOTE*** I did this as an expirment myself, do not order these primers without checking them youself.</p>
 <a href="https://twitter.com/chadstachowicz">Twitter</a>
 <br/>
 <form method="POST" action="/results">
