--- a/app/views/home/results.html.erb
+++ b/app/views/home/results.html.erb
@@ -1,4 +1,4 @@
-<h1 style="margin-top:40px">Primer Finder Results</h1>
+<h1 style="margin-top:40px">Primer Search Results</h1>
 <h3>Author: Chad Stachowicz (cstachowicz@cloverhound.com)</h3>
 <p>You can use this small application to search for primers for PCR in a sequence of your choice</p>
 <a href="https://twitter.com/chadstachowicz">Twitter</a>
